# finance-query-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  finance-ask  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/raw/: README.md  item1_business.txt  item1a_risk_factors.txt  item7_mda.txt
deploy/: nginx.conf  setup-vps.sh
docs/: architecture.md  decisions.md  status.md
evals/: agent_cases.jsonl  compare_retrieval.py  evaluate_agent.py  evaluate_ragas.py  ragas_cases.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AgentGraph.tsx  App.tsx  api.ts  styles.css
src/: ask.py  config.py
src/agent/: graph.py
src/api/: app.py
src/generation/: answer.py  llm.py
src/ingestion/: ingest.py
src/observability/: langsmith.py
src/retrieval/: dense.py  hybrid.py  sparse.py
tests/: test_answer.py  test_api.py  test_graph.py  test_hybrid.py  test_langsmith_observability.py  test_sparse.py
