[project]
name = "finance-query-engine"
version = "0.1.0"
description = "Agentic RAG system for financial document question answering."
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "langchain-openai>=0.3",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "rank-bm25>=0.2.2",
]
