[project]
name = "finance-query-engine"
version = "0.1.0"
description = "Agentic RAG system for financial document question answering."
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "langchain-openai>=0.3",
    "langgraph",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
eval = [
    # RAGAS 0.4.x imports a legacy LangChain community module removed in 0.4.x.
    "langchain-community<0.4",
    "ragas>=0.3,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
